# sigrok-pico

./: .gitignore  AnalyzerDetails.md  GettingStarted.md  PICOBuildNotes.md  README.md  SerialProtocol.md  SigrokBuildNotes.md
.github/workflows/: ci.yml
pico_pgen/: CMakeLists.txt  pico_sdk_pgen.c
pico_sdk_sigrok/: CMakeLists.txt  pico_sdk_sigrok.c  sr_device.c  sr_device.h
pico_sdk_sigrok/release/: README.md  pico2_baseline.uf2  pico2_dig26.uf2  pico2_dig32.uf2  pico_baseline.uf2  pico_baseline_serial.uf2  pico_dig26.uf2  pico_dig32.uf2  pico_original.uf2
pico_sdk_sr_gen1/: CMakeLists.txt  pico_sdk_sr_gen_1.bak.c  sr_device.h
pulseview/: Readme.md
raspberrypi-pico/: api.c  protocol.c  protocol.h
sigrok-generic/: api.c  protocol.c  protocol.h
